name:                global-examples
version:             0.1.0
cabal-version:       >= 1.10
build-type:          Simple
license:             BSD3
license-file:        LICENSE
copyright:           Copyright (C) 2011 Byron James Johnson
author:              Byron James Johnson
maintainer:          KrabbyKrap@gmail.com
synopsis:            Executable exemplifying usage of the "global" library
description:         Executable exemplifying usage of the @global@ library
category:            Examples
tested-with:         GHC == 7.0.2

executable global-examples-basic
  default-language:  Haskell2010
  hs-source-dirs:    basic
  main-is:           Main.hs
  build-depends:     base >= 4 && < 5, global >= 0.1 && < 1.0
  build-tools:       ghc >= 7.0.0
  buildable:         True
  ghc-options:       -Wall
  default-extensions:
    TemplateHaskell

executable global-examples-mvar
  default-language:  Haskell2010
  hs-source-dirs:    mvar
  main-is:           Main.hs
  build-depends:     base >= 4 && < 5, global >= 0.1 && < 1.0
  build-tools:       ghc >= 7.0.0
  buildable:         True
  ghc-options:       -Wall
  default-extensions:
    TemplateHaskell
    QuasiQuotes

executable global-examples-multiple
  default-language:  Haskell2010
  hs-source-dirs:    multiple
  main-is:           Main.hs
  build-depends:     base >= 4 && < 5, global >= 0.1 && < 1.0
  build-tools:       ghc >= 7.0.0
  buildable:         True
  ghc-options:       -Wall
  default-extensions:
    TemplateHaskell

executable global-examples-type
  default-language:  Haskell2010
  hs-source-dirs:    type
  main-is:           Main.hs
  build-depends:     base >= 4 && < 5, global >= 0.1 && < 1.0
  build-tools:       ghc >= 7.0.0
  buildable:         True
  ghc-options:       -Wall
  default-extensions:
    TemplateHaskell
  other-extensions:
    ExplicitForAll

executable global-examples-chan
  default-language:  Haskell2010
  hs-source-dirs:    chan
  main-is:           Main.hs
  build-depends:     base >= 4 && < 5, global >= 0.1 && < 1.0
  build-tools:       ghc >= 7.0.0
  buildable:         True
  ghc-options:       -Wall
  default-extensions:
    TemplateHaskell
    QuasiQuotes

executable global-examples-semaphore
  default-language:  Haskell2010
  hs-source-dirs:    semaphore
  main-is:           Main.hs
  build-depends:     base >= 4 && < 5, global >= 0.1 && < 1.0, time >= 1.0 && < 2
  build-tools:       ghc >= 7.0.0
  buildable:         True
  ghc-options:       -Wall
  default-extensions:
    TemplateHaskell
    QuasiQuotes

executable global-examples-assorted
  default-language:  Haskell2010
  hs-source-dirs:    assorted
  main-is:           Main.hs
  build-depends:     base >= 4 && < 5, global >= 0.1 && < 1.0, stm >= 2 && < 3, SafeSemaphore >= 0.7 && < 1
  build-tools:       ghc >= 7.0.0
  buildable:         True
  ghc-options:       -Wall
  default-extensions:
    TemplateHaskell

executable global-examples-uninitialized
  default-language:  Haskell2010
  hs-source-dirs:    uninitialized
  main-is:           Main.hs
  build-depends:     base >= 4 && < 5, global >= 0.1 && < 1.0
  build-tools:       ghc >= 7.0.0
  buildable:         True
  ghc-options:       -Wall
  default-extensions:
    TemplateHaskell

source-repository head
  type:              darcs
  location:          http://patch-tag.com/r/bob/global
  subdir:            examples
